--- a/Prototipo/app/src/main/res/layout/content_main.xml
+++ b/Prototipo/app/src/main/res/layout/content_main.xml
@@ -14,22 +14,32 @@
     tools:showIn="@layout/app_bar_main">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/ic_menu_gallery"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="0dp"
         android:id="@+id/imageView1" />
 
     <Button
-        android:text="Button"
+        android:text="Seleciona imagem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:id="@+id/button1" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
+        android:visibility="invisible"
+        android:text="Há uma pessoa na foto" />
 
 
 </RelativeLayout>
