--- a/Prototipo/app/src/main/res/layout/content_main.xml
+++ b/Prototipo/app/src/main/res/layout/content_main.xml
@@ -41,5 +41,28 @@
         android:visibility="invisible"
         android:text="Há uma pessoa na foto" />
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:text=""/>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="102dp">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""/>
+    </android.support.design.widget.TextInputLayout>
+
 
 </RelativeLayout>
